# clovers

./: .gitattributes  .gitignore  Cargo.toml  Justfile  README.md  crates.js  deny.toml  help.html  rust-toolchain.toml  search-index.js  settings.html  src-files.js
clovers/: .gitignore  Cargo.toml  README.md  all.html  build.rs  constant.EPSILON_CONSTANT_MEDIUM.html  constant.EPSILON_RECT_THICKNESS.html  constant.EPSILON_SHADOW_ACNE.html  constant.PI.html  index.html  sidebar-items.js  struct.Box.html  struct.RenderOpts.html  struct.Vec.html  type.Direction.html  type.Displacement.html  type.Float.html  type.Position.html  type.Vec2.html  type.Vec3.html  type.Vec4.html
clovers-app/: .gitignore  Cargo.toml  README.md
clovers-app/src/: app.rs  draw_gui.rs  lib.rs  main.rs
clovers-cli/: Cargo.toml  README.md  rust-toolchain.toml
clovers-cli/benches/: draw_cpu.rs
clovers-cli/src/: bvhdepth.rs  colorize.rs  debug_visualizations.rs  draw_cpu.rs  draw_gpu.rs  gltf_scene.rs  json_scene.rs  lib.rs  main.rs  normals.rs  render.rs  sampler.rs  scenefile.rs  trace.rs  validate.rs  write.rs
clovers-cli/src/sampler/: blue.rs  random.rs
clovers-gpu/: Cargo.toml  rust-toolchain.toml
clovers-gpu/shaders/: Cargo.toml
clovers-gpu/shaders/src/: lib.rs
clovers-gpu/src/: lib.rs
clovers/aabb/: index.html  sidebar-items.js  struct.AABB.html
clovers/benches/: aabb.rs  debug_scene.rs  interval.rs  random.rs  spectrum.rs  triangle.rs  wavelength.rs
clovers/bvh/: enum.BvhAlgorithm.html  index.html  sidebar-items.js  struct.BVHNode.html
clovers/bvhnode/: index.html  sidebar-items.js  struct.BVHNode.html
clovers/camera/: index.html  sidebar-items.js  struct.Camera.html  struct.CameraInit.html
clovers/colorinit/: enum.ColorInit.html  enum.TypedColorInit.html  index.html  sidebar-items.js
clovers/colorize/: fn.colorize.html  index.html
clovers/examples/: plots.rs
clovers/hitable/: enum.Hitable.html  fn.get_orientation.html  index.html  sidebar-items.js  struct.Empty.html  struct.HitRecord.html  struct.HitableList.html  trait.HitableTrait.html
clovers/hitrecord/: index.html  sidebar-items.js  struct.HitRecord.html
clovers/illuminants/: index.html  sidebar-items.js  struct.D50.html  struct.D65.html  struct.FL1.html  struct.FL10.html  struct.FL11.html  struct.FL12.html  struct.FL2.html  struct.FL3.html  struct.FL3_1.html  struct.FL3_10.html  struct.FL3_11.html  struct.FL3_12.html  struct.FL3_13.html  struct.FL3_14.html  struct.FL3_15.html  struct.FL3_2.html  struct.FL3_3.html  struct.FL3_4.html  struct.FL3_5.html  struct.FL3_6.html  struct.FL3_7.html  struct.FL3_8.html  struct.FL3_9.html  struct.FL4.html  struct.FL5.html  struct.FL6.html  struct.FL7.html  struct.FL8.html  struct.FL9.html  struct.LED_B1.html  struct.LED_B2.html  struct.LED_B3.html  struct.LED_B4.html  struct.LED_B5.html  struct.LED_BH1.html  struct.LED_RGB1.html  struct.LED_V1.html  struct.LED_V2.html
clovers/interval/: index.html  struct.Interval.html
clovers/materials/: enum.Kind.html  enum.Material.html  enum.MaterialInit.html  enum.MaterialType.html  index.html  sidebar-items.js  struct.Material.html  struct.ScatterRecord.html  struct.SharedMaterial.html  trait.MaterialTrait.html
clovers/materials/cone_light/: index.html  sidebar-items.js  struct.ConeLight.html
clovers/materials/dielectric/: index.html  sidebar-items.js  struct.Dielectric.html
clovers/materials/diffuse_light/: index.html  sidebar-items.js  struct.DiffuseLight.html
clovers/materials/dispersive/: index.html  sidebar-items.js  struct.Dispersive.html
clovers/materials/gltf/: index.html  sidebar-items.js  struct.GLTFMaterial.html
clovers/materials/isotropic/: index.html  sidebar-items.js  struct.Isotropic.html
clovers/materials/lambertian/: index.html  sidebar-items.js  struct.Lambertian.html
clovers/materials/metal/: index.html  sidebar-items.js  struct.Metal.html
clovers/materials/thin_film/: index.html  sidebar-items.js  struct.ThinFilm.html
clovers/normals/: fn.normal_map.html  fn.normal_to_color.html  index.html
clovers/objects/: enum.Object.html  fn.object_to_hitable.html  index.html  sidebar-items.js  struct.ObjectList.html
clovers/objects/boxy/: index.html  sidebar-items.js  struct.Boxy.html  struct.BoxyInit.html
clovers/objects/constant_medium/: index.html  sidebar-items.js  struct.ConstantMedium.html  (+1 more)
clovers/onb/: index.html  sidebar-items.js  struct.ONB.html
clovers/pdf/: enum.PDF.html  index.html  sidebar-items.js  struct.CosinePDF.html  struct.HitablePDF.html  struct.MixturePDF.html  struct.SpherePDF.html  struct.ZeroPDF.html  trait.PDFTrait.html
clovers/random/: fn.random_cosine_direction.html  fn.random_in_unit_disk.html  fn.random_on_hemisphere.html  fn.random_unit_vector.html  index.html  sidebar-items.js
clovers/ray/: index.html  sidebar-items.js  struct.Ray.html
clovers/scenes/: boing.json  cornell_with_smoke.json  fn.initialize.html  grey.json  index.html  perlin.json  scene.json  scene_large_light.json  sidebar-items.js  struct.Scene.html  struct.SceneFile.html
clovers/spectrum/: fn.spectral_power.html  fn.spectral_powers.html  fn.spectrum_xyz_to_p.html  index.html  sidebar-items.js  struct.SPD.html
clovers/src/: aabb.rs  bihnode.rs  bvh.rs  bvhnode.rs  camera.rs  color.rs  colorinit.rs  colorize.rs  colors.rs  draw.rs  draw_gpu.rs  draw_spectral.rs  hitable.rs  hitrecord.rs  illuminants.rs  interval.rs  lib.rs  main.rs  materials.rs  normals.rs  objects.rs  onb.rs  pdf.rs  perlin.rs  random.rs  ray.rs  scenes.rs  shaders.rs  spectral.rs  spectrum.rs  textures.rs  wavelength.rs
clovers/tests/: spectrum.rs  wavelength.rs
clovers/textures/: enum.Texture.html  index.html  sidebar-items.js  trait.TextureTrait.html
clovers/wavelength/: constant.MAX_WAVELENGTH.html  constant.MIN_WAVELENGTH.html  constant.SPECTRUM.html  constant.SPECTRUM_SIZE.html  constant.WAVELENGTH_PROBABILITY.html  constant.WAVE_SAMPLE_COUNT.html  fn.random_wavelength.html  fn.rotate_wavelength.html  fn.sample_wavelength.html  fn.wavelength_into_xyz.html  index.html  sidebar-items.js  type.Wavelength.html
(+826 files in other folders)
