[package]
name = "clovers"
version = "0.1.0"
authors = ["Walther <veeti.haapsamo@gmail.com>"]
edition = "2018"


[features]
gui = ["pixels", "winit", "winit_input_helper"]

[dependencies]
image = "0.23.5"
nalgebra = "0.21.1"
rayon = "1.3.1"
rand = "0.7.3"
chrono = "0.4.11"
humantime = "2.0.1"
indicatif = { version = "0.15.0", features = ["rayon"] }
clap = "3.0.0-beta.1"

pixels = {version = "0.0.4", optional=true }
winit = {version = "0.22.2", optional=true }
winit_input_helper = { version="0.7.0", optional=true }
