[package]
name = "clovers"
version = "0.1.0"
authors = ["Walther <veeti.haapsamo@gmail.com>"]
edition = "2018"


[lib]
name = "clovers"
path = "src/lib.rs"

[[bin]]
name = "clovers"
path = "src/main.rs"
required-features = ["cli"]

[features]
gui = ["pixels", "winit", "winit_input_helper"]
cli = ["image", "chrono", "humantime", "indicatif", "clap", "toml"]

[dependencies]
# Required for everything
nalgebra = { version = "0.21.1",  features = ["serde-serialize"] }
rayon = { git = "https://github.com/nikomatsakis/rayon/", branch = "latch-target-thread-2" }
rand = "0.7.3"
serde = { version = "1.0",  features = ["derive", "rc"] }
serde_json = { version = "1.0" }
# Required for CLI
image = { version = "0.23", optional = true }
chrono = { version = "0.4", optional = true }
humantime = { version = "2.0", optional = true }
indicatif = { version = "0.15", features = ["rayon"],  optional = true }
clap = { version = "3.0.0-beta.1", optional = true }
toml = { version = "0.5", optional = true }
# Required for GUI
pixels = { version = "0.0.4", optional=true }
winit = { version = "0.22", optional=true }
winit_input_helper = { version="0.7", optional=true }

[patch.crates-io]
rayon = { git = "https://github.com/nikomatsakis/rayon/", branch = "latch-target-thread-2" }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"