[package]
name = "clovers-app"
version = "0.1.0"
authors = ["Walther <veeti.haapsamo@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# clovers itself
clovers = { path = "../clovers", features = ["serde-derive"]}
# Required for everything
rayon = "1.5.2"
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
serde = { version = "1.0.136", features = ["derive"], default-features = false }
serde_json = "1.0.79"
indicatif = { version = "0.16.2", features = ["rayon"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
# Required for GUI
eframe = { version = "0.17.0", features = [] }

[dev-dependencies]
