[package]
name = "clovers-shader"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
clovers = { path = "../clovers", features = ["gpu"], default-features = false }
spirv-std = { git = "https://github.com/Walther/rust-gpu", branch = "aggressive-inlining", features = ["glam"] }
