[package]
name = "clovers"
version = "0.1.0"
authors = ["Walther <veeti.haapsamo@gmail.com>"]
edition = "2021"
publish = false

[lib]
name = "clovers"
path = "src/lib.rs"
crate-type = ["lib"]

[features]
ply = ["ply-rs"]
serde-derive = ["serde/derive", "nalgebra/serde-serialize"]
stl = ["stl_io", "std"]
gl_tf = ["gltf"]
std = []
traces = ["tracing"]

[dependencies]
enum_dispatch = "0.3.13"
gltf = { version = "1.4.1", optional = true }
nalgebra = { version = "0.33.2" }
palette = { version = "0.7.6", features = ["serializing"] }
ply-rs = { version = "0.1.3", optional = true }
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
rand_distr = { version = "0.4.3", features = ["std_math"] }
serde = { version = "1.0.215", features = [
  "derive",
], default-features = false, optional = true }
stl_io = { version = "0.8.3", optional = true }
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
divan = "0.1.16"
proptest = "1"

[[bench]]
name = "random"
harness = false

[[bench]]
name = "interval"
harness = false

[[bench]]
name = "aabb"
harness = false

[[bench]]
name = "wavelength"
harness = false

[[bench]]
name = "spectrum"
harness = false

[[bench]]
name = "triangle"
harness = false
