[package]
name = "clovers"
version = "0.1.0"
authors = ["Walther <veeti.haapsamo@gmail.com>"]
edition = "2021"
publish = false

[lib]
name = "clovers"
path = "src/lib.rs"
crate-type = ["lib"]

[features]
ply = ["ply-rs"]
serde-derive = ["serde/derive", "nalgebra/serde-serialize"]
stl = ["stl_io", "std"]
gl_tf = ["gltf"]
std = []
traces = ["tracing"]

[dependencies]
enum_dispatch = "0.3.13"
gltf = { version = "1.4.1", optional = true }
nalgebra = { version = "0.34.1" }
palette = { version = "0.7.6", features = ["serializing"] }
ply-rs = { version = "0.1.3", optional = true }
rand = { version = "0.9.2", features = [
  "small_rng",
  "thread_rng",
], default-features = false }
rand_distr = { version = "0.5.1", features = ["std_math"] }
serde = { version = "1.0.228", features = [
  "derive",
], default-features = false, optional = true }
stl_io = { version = "0.10.0", optional = true }
tracing = { version = "0.1.44", optional = true }
phf = { version = "0.13.1", default-features = false }

[dev-dependencies]
divan = "0.1.21"
plotly = "0.14.0"
proptest = "1"

[build-dependencies]
phf = { version = "0.13.1", default-features = false }
phf_codegen = "0.13.1"

[[bench]]
name = "random"
harness = false

[[bench]]
name = "interval"
harness = false

[[bench]]
name = "aabb"
harness = false

[[bench]]
name = "wavelength"
harness = false

[[bench]]
name = "spectrum"
harness = false

[[bench]]
name = "triangle"
harness = false
